--- a/src/index.css
+++ b/src/index.css
@@ -67,12 +67,11 @@ body{
 .profile h1{
   font-size: 45px;
   width: 23rem;
-  padding: 1rem;
+  padding-left: 1rem;
 }
 .profile p{
   font-size: 20PX;
   text-align: justify;
-  padding: 1rem;
   max-width: 40rem;
 }
 
