--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,7 @@ body{
   font-size: 20PX;
   text-align: justify;
   max-width: 40rem;
+  padding-left: 1rem;
 }
 
 .contact{
@@ -82,6 +83,7 @@ body{
   font-size: 17px;
   gap: 1rem;
   align-items: center;
+  padding-left: 1rem;
 }
 
 .contact a{
@@ -91,7 +93,7 @@ body{
   border: 1px solid gray;
   padding: 7px;
   border-radius: 15px;
-  background-color: rgb(33, 80, 191);
+  background-color: rgb(79, 88, 109);
   gap: 5px;
 }
 
@@ -104,7 +106,6 @@ body{
   max-width: 56rem;
   margin-left: auto;
   margin-right: auto;
-  
 }
 
 .work p{
