--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,26 @@
+
 body{
   /*background-color: #242424;*/
   /*background-image: radial-gradient(rgb(31, 81, 120) 50%,#1b1e1f);
   background-image: linear-gradient(to left top, rgb(40, 58, 81),rgb(58, 7, 7));
   */
-  background: linear-gradient(190deg, rgba(112,169,161,1) 0%, rgba(195,195,195,1) 50%, rgb(145, 178, 157) 100%);
+  background: linear-gradient(180deg, rgb(127, 190, 181) 0%, rgb(146, 154, 177) 50%, rgb(145, 178, 157) 100%);
   font-family: "Onest", sans-serif;
   font-optical-sizing: auto;
   font-weight: 200;
   font-style: normal;
   margin: 0; /* Asegúrate de que no haya márgenes predeterminados */
   padding: 0;
-  height: 100%;
+  min-height: 100vh;
 
 
 }
+
 
 .portfolio{
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
   flex-direction:column;
 }
 
@@ -34,7 +35,7 @@ body{
   box-shadow: 1px 2px 10px rgb(54, 54, 54);
   position: fixed;
   top: 0;
-  background-color: rgb(106, 108, 210);
+  background-color: rgb(79, 88, 109);
 }
 
 .navbar ul{
@@ -102,19 +103,23 @@ body{
 /*Experiencia laboral*/
 
 .work{
+  margin-top: 5rem;
   color: white;
-  font-size: 3rem;
-  max-width: 56rem;
+  max-width: 42rem;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
 
-.work p{
-  font-size: 1.5rem;
-  max-width: 40rem;
-  text-align: justify;
-
-}
 .work h2{
-  font-size: 3rem;
+  font-size: 40px;
+  padding-left: 1rem;
+}
+
+.timeline-work{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  
 }
