--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,9 @@ body{
 .timeline-work{
   display: flex;
   justify-content: center;
-  align-items: center;
-
-  
+  align-items: center;  
+}
+.timeline-work p{
+  text-align: justify;
+  padding-right: 3rem;
 }
