--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,13 @@ body{
   margin: 0; /* Asegúrate de que no haya márgenes predeterminados */
   padding: 0;
   min-height: 100vh;
-
+  
 
 }
 
+html {
+  scroll-behavior: smooth;
+}
 
 .portfolio{
   display: flex;
@@ -46,6 +49,10 @@ body{
   justify-content: center;
 }
 
+.navbar a{
+  text-decoration: none;
+  color: white;
+}
 .navbar ul li{
   font-size: 15px;
   padding: 10px;
@@ -103,7 +110,7 @@ body{
 /*Experiencia laboral*/
 
 .work{
-  margin-top: 5rem;
+  margin-top: 10rem;
   color: white;
   max-width: 42rem;
   width: 100%;
