--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,9 @@ body{
 html {
   scroll-behavior: smooth;
 }
+.markyellow{
+  color: yellow;
+}
 
 .portfolio{
   display: flex;
@@ -39,6 +42,7 @@ html {
   position: fixed;
   top: 0;
   background-color: rgb(79, 88, 109);
+  z-index: 1000;
 }
 
 .navbar ul{
@@ -56,6 +60,10 @@ html {
 .navbar ul li{
   font-size: 15px;
   padding: 10px;
+}
+.navbar ul li a.active {
+  color: yellow; /* Cambia el color del enlace activo */
+  font-weight: bold; /* Puedes añadir más estilos como hacerlo en negrita */
 }
 
 
@@ -110,7 +118,7 @@ html {
 /*Experiencia laboral*/
 
 .work{
-  margin-top: 10rem;
+  margin-top: 5rem;
   color: white;
   max-width: 42rem;
   width: 100%;
