--- a/src/index.css
+++ b/src/index.css
@@ -152,3 +152,23 @@ html {
   text-align: justify;
   padding-right: 1rem;
 }
+
+
+
+
+.aboutme{
+  margin-top: 5rem;
+  color: white;
+  max-width: 42rem;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.aboutme h2{
+  font-size: 40px;
+  padding-left: 1rem;
+}
+.aboutme p{
+  padding: 1rem;
+}
