--- a/src/index.css
+++ b/src/index.css
@@ -122,7 +122,7 @@ html {
   border: 1px solid gray;
   padding: 7px;
   border-radius: 15px;
-  background-color: rgb(79, 88, 109);
+  background-color: rgb(26, 35, 56);
   gap: 5px;
 }
 
@@ -130,7 +130,7 @@ html {
 /*Experiencia laboral*/
 
 .work{
-  margin-top: 5rem;
+  margin-top: 4rem;
   color: white;
   max-width: 42rem;
   width: 100%;
@@ -171,4 +171,6 @@ html {
 }
 .aboutme p{
   padding: 1rem;
+  margin-bottom: 10rem;
+  font-size: 1.2rem;
 }
