--- a/src/index.css
+++ b/src/index.css
@@ -130,7 +130,7 @@ html {
 /*Experiencia laboral*/
 
 .work{
-  margin-top: 4rem;
+  margin-top: 5rem;
   color: white;
   max-width: 42rem;
   width: 100%;
@@ -153,6 +153,113 @@ html {
   padding-right: 1rem;
 }
 
+.proyectos{
+  margin-top: 5rem;
+  color: white;
+  max-width: 42rem;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.proyectos h2{
+  font-size: 40px;
+  padding-left: 1rem;
+}
+.proyectos p{
+  padding: 1rem;
+  margin-bottom: 10rem;
+  font-size: 20px;
+}
+
+.project-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  flex-wrap: wrap;
+ 
+  box-shadow: 1px 1px 9px 5px rgba(0, 0, 0, 0.2);
+}
+
+
+
+
+/* Contenedor del proyecto */
+.image-container {
+  position: relative;
+  width: 200px; /* Ajusta el tamaño del contenedor */
+  overflow: hidden;
+}
+
+
+/* Contenedor del proyecto */
+.image-container {
+  margin: 1rem;
+  position: relative;
+  width: 20rem; /* Ajusta el tamaño del contenedor */
+  height: 20rem;
+  overflow: hidden;
+  border-radius: 10px; /* Bordes redondeados para suavizar */
+}
+
+/* Contenedor de imágenes */
+.image-container {
+  position: relative;
+  width: auto;
+  height: 25rem;
+  overflow: hidden;
+}
+
+/* Imagen principal del proyecto */
+.project-image-main {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.4s ease; /* Transición suave en hover */
+}
+
+/* Imagen secundaria que aparece en hover (está oculta por defecto) */
+.project-image-hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit:cover;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+/* Al hacer hover sobre el contenedor, aplica zoom solo a la imagen */
+.image-container:hover .project-image-main {
+  transform: scale(1.1); /* Efecto de zoom (aumenta un 5%) */
+}
+
+/* Al hacer hover, la imagen secundaria aparece */
+.image-container:hover .project-image-hover {
+  opacity: 1;
+}
+
+/* Asegúrate de que el texto esté bien colocado */
+.project-container p {
+  margin: 0;
+}
+.project-container h3 {
+  font-size: 2rem;
+  padding-left: 1rem;
+}
+.stack{
+  width: 100%;
+
+}
+
+.stack ol{
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
 
 
 
@@ -172,5 +279,8 @@ html {
 .aboutme p{
   padding: 1rem;
   margin-bottom: 10rem;
-  font-size: 1.2rem;
+  font-size: 20px;
+  margin-bottom: 20rem;
 }
+
+
