--- a/src/index.css
+++ b/src/index.css
@@ -256,15 +256,14 @@ html {
 .stack ol{
   list-style-type: none;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   text-align: center;
-}
-
-
+  padding: 0;
+} 
 
 .aboutme{
-  margin-top: 5rem;
+  margin-top: 3rem;
   color: white;
   max-width: 42rem;
   width: 100%;
@@ -280,7 +279,8 @@ html {
   padding: 1rem;
   margin-bottom: 10rem;
   font-size: 20px;
-  margin-bottom: 20rem;
+  margin-bottom: 13rem;
+  text-align: justify;
 }
 
 
